# map-generation

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix
game/: Cargo.toml
game/src/: app.rs  event.rs  fps_counter.rs  handler.rs  logging.rs  main.rs  tile_to_tascii.rs  ui.rs
game_core/: Cargo.toml
game_core/src/: app.rs  chunk.rs  handler.rs  lib.rs  map.rs  terrain_generator.rs  tile.rs  ui.rs
game_core/src/terrain_generator/: noise_to_map.rs  perlin_noise.rs  terrain_generator.rs
llm_backend/: Cargo.toml
map_generation/: Cargo.toml
map_generation/src/: lib.rs  main.rs  noise_to_img.rs  perlin_gen.rs  terrain_generator.rs
perlin_to_image/: Cargo.toml
perlin_to_image/src/: main.rs
src/: main.rs  noise_to_img.rs  perlin_gen.rs
world_gen/: Cargo.toml
world_gen/src/: bin.rs  biome.rs  cell.rs  chunk.rs  city_generation.rs  concrete_cell.rs  image_utils.rs  intermediate_cell.rs  lib.rs  perlin_noise.rs
world_viewer/: Cargo.toml
world_viewer/src/: app.rs  camera_plugin.rs  event.rs  handler.rs  logging.rs  main.rs  map.rs  terrain.rs  tile_to_ascii.rs  tui.rs  ui.rs
