[package]
name = "game"
version = "0.1.0"
authors = ["Louis Thevenet <louis.tvnt@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["full"] }
game_core = { path = "../game_core" }
