[package]
name = "game"
version = "0.1.0"
authors = ["Louis Thevenet <louis.tvnt@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["full"] }
game_core = { path = "../game_core" }
tracing = "0.1.41"
lazy_static = "1.5.0"
color-eyre = "0.6.3"
tracing-error = "0.2.1"
tracing-subscriber = {version = "0.3.19", features = ["env-filter", "serde"]}
directories = "5.0.1"
