[package]
name = "world_viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.3", features = ["dynamic_linking"] }
bevy_dev_tools = "0.17.3"
bevy_water = "0.17.2"
colorgrad = "0.8.0"
# Less engine logs
log = { version = "*", features = [
  "max_level_debug",
  "release_max_level_warn",
] }
rayon = "1.11.0"
world_gen = { path = "../world_gen" }
